# fastapi-rag

./: README.md  pyproject.toml
src/app/api/: __init__.py
src/app/api/v1/: rag.py
src/app/core/: config.py  logger.py  middleware.py  setup.py
src/app/core/db/: __init__.py  database.py  models.py
src/app/models/: document.py
src/app/services/: embeddings_service.py  rag_service.py
