[project]
name = "fastapi-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav Panchal",email = "gkp.125@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
